Books now appear visually, added remove and read toggle button.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
         <div class="title">Library</div>
     </div>
     <div class="main">
-        <div class="books">
-            <div class="book">Dummy book with some dummy data</div>
-        </div>
+        <table>
+            <tr>
+                <th>Title</th>
+                <th>Author</th>
+                <th>Pages</th>
+                <th>Read</th>
+            </tr>
+        </table>
         <button id="new-book">+ New Book</button>
 
         <dialog>
